--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ beautifulsoup4==4.10.0
 certifi==2021.10.8
 dj-database-url==0.5.0
 Django==4.0
-django-heroku==0.3.1
+django-heroku==0.0.0
 django-livereload-server==0.4
+gunicorn==20.1.0
 numpy==1.21.5
+psycopg2-binary
 six==1.16.0
 soupsieve==2.3.1
 sqlparse==0.4.2
